[package]
name = "keep-in-touch"
version = "0.1.0"
authors = ["Nick Machnik <nick.machnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9.3"
clap = "2.33"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.1"
hashbrown = { version = "0.7", features = ["serde", "rayon"] }
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"