[package]
name = "kit"
version = "0.2.1"
authors = ["Nick Machnik <nick.machnik@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nickmachnik/keep-in-touch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = "2.33"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.1"
hashbrown = { version = "0.7", features = ["serde", "rayon"] }
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exitcode = "1"
regex = "1"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"